@@ -2234,6 +2234,8 @@ test(817, DT[,!mycols,with=FALSE], DT[,list(a,c)])
 mycols = 2
 test(818, DT[,!mycols,with=FALSE], DT[,list(a,c)])
 
+# Test X[Y] slowdown
+test(819, TRUE, TRUE)  # dummy test to increment test.data.table() counter, for Alex to test.
 
 # TO DO:
 #DT = data.table(a=1:3,b=1:6,key="a")
